Created New Folder

--- a/Index.html
+++ b/Index.html
@@ -117,35 +117,28 @@
     <br>
    <p style="text-align: justify;"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. <br> Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. <br>Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
    <br>
-   <table>
-    <thead>
-        <tr style="font-size: 15px; text-align: left;">
-        <th>Color</th>
-        <td style="padding-left: 55px;">Green</td>
-    </tr>
-    </thead>
-    <tbody>
-        <tr>
-        <th>Availability</th>
-        <td style="padding-left: 55px;">3 in stock</td>
-        </tr>
-        <tr>
-        <th style="padding-top: 25px;">Select Size:</th>
-        <td style="padding-left: 55px; padding-top: 20px;">Small</td>
-        <td style="padding-left: 2px; padding-top: 20px;">Medium</td>
-        <td style="padding-left: 30px; padding-top: 20px;">Large</td>
-        </tr>
-        <tr>
-            <th style="padding-top: 25px; padding-right: 10%;">Quantity:</th>
-            <td style="padding-left: 55px; padding-top: 20px;">4</td>
-        </tr>
-        <tr>
-        <button type="button" onclick="alert('New Project!')"></button> </button>
-        </tr>
-        <thead>
-   </table>
+    <div style="display: flex;">
+        <ol style="list-style-type: none; font-weight: bold;">
+            <li>Color</li>
+            <li>Availability</li>
+            <br>
+            <br>
+            <li>Select size:</li>
+            <br>
+            <br>
+            <li>Quantity:</li>
+        </ol>
+        <ol style="list-style: none;">
+            <li>Green</li>
+            <li>3 in stock</li>
+            <li style="padding: 10px;">Small</li>
+            <li>Medium</li>
+            <li>Large</li>
+        </ol>
+    </div>
+ 
 </div>
-<button type="button" onclick="alert('New Project!')">Click</button>
+<button type="button" onclick="alert('New Project!')">Buy Now</button>
 </div>
 </body>
 </html>
